...
      <TabList asChild>
        <CustomTabList>
          <TabTrigger name="log" href="/" asChild>
            <TabButton>Log</TabButton>
          </TabTrigger>
          <TabTrigger name="vitals" href="/vitals" asChild>
            <TabButton>Vitals</TabButton>
          </TabTrigger>
          <TabTrigger name="groups" href="/groups" asChild>
            <TabButton>Groups</TabButton>
          </TabTrigger>
          <TabTrigger name="toolbox" href="/toolbox" asChild>
            <TabButton>Toolbox</TabButton>
...
